CHANGELOG

== July 7, 2012
* Allows to delete Emails Deliveries properly
* Updated Gems

== July 1-5, 2012
* Fixed Wrong ATOM feed time on article, bug #6
* Added global Comments page: /comments
* Global comments RSS: /comments.rss
* Improved admin interface
* Added number of days since items on categories
* fixed google indexing
* removed user email
* better registration form
* removed all references of the user's email address
* Forcing HTTPS always for admin users
* original author links improved
* twitter queue delete links
* minor bug fixes
* updated many gemfiles

== June 24, 2012
* Improved Original Author links
* Fixed original author link on emails
* Allow Admins to delete Twitter queue jobs
* Updated Gems
* Bundled AnyTime into a Gem

== June 23, 2012
* Improved meta tags based on google webmaster info
* Added Site Links to top menu
* Changed from H2 to H1 on landing page
* Addded H1 header on tag/language pages
* Code cleanup
* Rspec tests added

== June 22, 2012
* Added Authors to top menu
* Added poll_interval to sidekiq
* Improved CSS for comments
* Updated Gems
* Fix modernizr on ipad
* set default items_count to 0
* Rearanged Asset files into vendor
* Serving twitter widgets.js from own domain

== June 22, 2012
* Added registration reason to edit profil
* Updated Gems
* Tuned postgresql.conf

== June 20, 2012
* Added WindowsLive connect
* Improved Admin interface for users/admin_users
* re-aranged Admin Dashboard
* Added links to admin (WIP)
* Updated Gems

== June 19, 2012
* Improved Welcome Email

== June 18, 2012
* Updated robots.txt
* Updated Gems
* fixed missing font errors
* Welcome Email (testing)
* updated Rspec Tests

== June 17, 2012
* Updated URL to have item ID i.e. "123-headline-big-news"
* Improved ipad portrait mode

== June 16, 2012
* Add ability to upload documents
* Fixed bug on attachments page
* Updated robots.txt to ignore some bots and paths
* Lots of improvements for small mobile screens